@@ -1,20 +1,19 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Class::Null" => "2.110730";
-requires "Date::Format" => "2.24";
 requires "Exporter::Tiny" => "0.042";
 requires "File::DataClass" => "v0.66.0";
 requires "IPC::ShareLite" => "0.17";
 requires "Moo" => "2.000001";
 requires "Time::Elapsed" => "0.31";
+requires "TimeDate" => "1.21";
 requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000005";
 requires "Unexpected" => "v1.0.0";
 requires "namespace::autoclean" => "0.26";
 requires "perl" => "5.010001";
-recommends "Cache::Memcached" => "1.30";
-recommends "Redis" => "1.998";
+recommends "Redis" => "2.000";
 
 on 'build' => sub {
   requires "Module::Build" => "0.4202";
