@@ -1,5 +1,6 @@
 Revision history for IPC::SRLock
 
+          - Uses Redis instead of MemCached
           - Refactored coding style
 
 0.31.1    2017-02-03 23:08:51
